--- a/app/styles.css
+++ b/app/styles.css
@@ -27,3 +27,57 @@ body{
     width: calc(100% - 40px); 
     max-width: 99vw;
 }
+
+/* Calculate.css */
+.item-card {
+    margin: 12px auto 2px;
+    transition: transform 0.2s;
+    padding: 16px;
+    border-radius: 8px;
+    border: 1px solid #eaeaea;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    max-width: 97%;
+}
+
+.item-card:hover {
+    transform: scale(1.05);
+}
+
+.item-title {
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 8px;
+}
+
+.item-description {
+    font-size: 0.9rem;
+    color: #666;
+    margin-bottom: 10px;
+}
+
+.item-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 8px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.item-button:hover {
+    background-color: #0056b3;
+}
+
+.item-container {
+    min-height: 80vh;
+    width: 99%;
+    margin: 0 auto;
+    margin-top: 45vh;
+    overflow-y: auto;
+    border: 1px solid #eaeaea;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
