--- a/app/styles.css
+++ b/app/styles.css
@@ -77,7 +77,7 @@ body{
     margin: 0 auto;
     margin-top: 45vh;
     overflow-y: auto;
-    border: 1px solid #000000;
+    border: 1px solid #ffffff;
     padding: 10px;
     display: flex;
     flex-direction: column;
