--- a/app/styles.css
+++ b/app/styles.css
@@ -1,15 +1,28 @@
 body {
-    background-color: transparent; /* Fallback color */
-    background-image: url('../media/fenway.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: transparent; 
+    overflow-y: hidden;
+}
+
+.tabs{
+    background-color: white;
+}
+
+.mantine-Tabs-root {
+    background-color: rgba(255, 0, 0, 0.7); /* Adjust as needed */
+}
+
+/* Override the tab colors */
+.mantine-Tabs-tab {
+    background-color: transparent; /* Default background for tabs */
+    color: white; /* Default text color */
 }
 
 .mantine-Tabs-tab {
     padding: 20px 20px; 
     margin: 0 5px; 
     transition: background-color 0.5s; 
+    color: white;
+    font-weight: bold;
 }
 
 .mantine-Tabs-tab:hover {
@@ -18,17 +31,18 @@ body {
 }
 
 .food-item {
+    color: black; /* Keep the text color opaque */
     margin: 10px auto 1px; 
     padding: 1rem;
     border-radius: 12px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    border: 1px solid rgba(204, 204, 204, 0.6); /* Semi-transparent border */
+    background-color: rgba(249, 249, 249, 0.5); /* Semi-transparent background */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: black;
     width: calc(100% - 40px); 
     max-width: 99vw;
+    font-weight: bold;
 }
 
 /* Calculate.css */
@@ -75,8 +89,9 @@ body {
     height: 75vh;
     width: 99%;
     margin: 0 auto;
-    margin-top: 1vh;
+    margin-top: 3vh;
     overflow-y: auto;
+    border-radius: 4;
     border: 1px solid white;
     padding: 10px;
     display: flex;
@@ -218,4 +233,23 @@ th {
     font-size: 0.6rem; 
     border-radius: 4px; 
     background-color: white; /* Add a white background */
+}
+
+.food-items-container {
+    background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
+    border: 1px solid rgba(204, 204, 204, 0.3); /* Semi-transparent border */
+    border-radius: 12px; /* Rounded corners */
+    padding: 20px; /* Add some padding */
+    margin: 10px; /* Margin around the container */
+    max-width: 100%; /* Ensure it doesn't exceed the parent width */
+    height: calc(100vh - 105px); /* Adjust height based on other components */
+    overflow-y: auto; /* Allow scrolling if the content overflows */
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+}
+
+.full-height {
+    margin-bottom: 15vh; /* Make the stack fill the viewport height */
+    display: flex; /* Use flexbox to control alignment */
+    flex-direction: column; /* Align children vertically */
 }
