--- a/app/styles.css
+++ b/app/styles.css
@@ -1,5 +1,9 @@
 body {
     background-color: transparent; 
+    background-image: url('../media/fenway.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     overflow-y: hidden;
 }
 
